<resources>
    <string name="app_name">Cash Saverz</string>
    <string name="title_activity_book_details">Cash Saverz Details</string>
    <string name="browse_category">Browse By Category</string>
    <string name="browse_ranking">Browse By Ranking</string>
    <string name="spinner_color_text">Select Color / Size :</string>
    <string name="spinner_size_text">Available Sizes</string>
    <string name="category">\u2022  Category :</string>
    <string name="publisher_name">\u2022  Publisher :</string>
    <string name="size">\u2022  Size :</string>

    <string name="quantity">\u2022  Quantity :</string>
    <string name="brand">\u2022  Brand :</string>
    <string name="prod_desc"> Product Description :</string>

    <string name="Rs">\u20A8</string>

    <string name="price">Price :</string>
    <string name="isbn">\u2022  ISBN :</string>
    <string name="language">\u2022  Language :</string>
    <string name="no_of_pages">\u2022  No. Of Pages :</string>
    <string name="binding">\u2022  Binding :</string>
    <string name="rent">Rent Payable :</string>
    <string name="cart_title">My Cart</string>
    <string name="search_title">Search by name</string>
    <!--<string name="search_title">Search by Book, Author, Publisher</string>-->
    <string name="sort_by">Sort By</string>
    <string name="my_account">My Profile</string>
    <string name="book_details">Cash Saverz Specifications :</string>
    <string name="prod_details">Product Details :</string>

    <string name="rent_now">Order Now</string>
    <string name="return_book">Return</string>
    <string name="deliver_order">Deliver</string>
    <string name="proceed_to_checkout">Checkout</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="go_to_cart">Go To My Cart</string>

    <string name="not_available">Not Available</string>
    <string name="remove_all">Remove All</string>
    <string name="see_the_book">See Cash Saverz</string>
    <string name="reissue_book">Re-Issue</string>
    <string name="search_product">Search Product</string>
    <string name="contact_us_label">Get in touch with us via phone or email.
        You can also drop in your contact information and our executive will get in touch with you
        as soon as possible.</string>
    <string name="contact_us_email"><u>support@cashsavervz.com</u></string>
    <string name="contact_us_contact"><u>+919767173133</u></string>

    <string name="rupee">₹</string>
    <string name="loading">Loading...</string>
    <string name="order_id">\u2022 Order Id</string>
    <string name="status">\u2022 Status</string>
    <string name="issued_on">\u2022 Issued On</string>
    <string name="return_on">\u2022 Return On</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_browse_plans">Browse Plans</string>
    <string name="nav_payment_history">Payment History</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_version">Version</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">Login</string>
    <string name="nav_todays_delivery">Todays Delivery</string>
    <string name="nav_delivery_history">Delivery History</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_order">My Orders</string>
    <string name="nav_requested_books_history">Requested Cash Saverz History</string>

    <string name="something_went_wrong">Something went wrong.</string>
    <string name="error_other_issue">Something went wrong. Please try again later.</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <!--<item>Book My Book</item>-->
        <item>Cash Saverz</item>
        <item>My Profile</item>
        <item>My Rented Cash Saverz</item>
        <item>My Wishlist</item>
        <item>My Cart</item>
        <item>Settings</item>
        <item>Login</item>
        <item>Browse Plans</item>
        <item>Payment History</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
        <item>Todays Delivery</item>
        <item>Delivery History</item>
        <item>Contact Us</item>
        <item>New Cash Saverz Request</item>
        <item>Terms And Conditions</item>
        <!--<item>Exchange of Old Books</item>-->
        <item>Old Cash Saverz Exchange</item> <!--Added by SM-->
        <item>New Cash Saverz Request List</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms And Conditions</string>
    <!--<string name="exchange_of_old_books">Exchange of Old Books</string>-->
    <string name="exchange_of_old_books">Old Cash Saverz Exchange</string> <!--Added by SM-->
    <string name="contact_us">Contact Us</string>
    <string name="new_book_request">New Cash Saverz Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: PAYMENt Gateway -->
    <string name="card_number_hint">Enter card number</string>
    <string name="credit_card_number_hint">Enter Credit Card number</string>
    <string name="card_name_hint">Enter card holder name</string>
    <string name="card_nick_name_hint">Enter nick name</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_btn_text">Sign In</string>
    <string name="resend_btn_text">Resend</string>
    <string name="reset_pass_text">Reset Password</string>
    <string name="signup_text">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="enter_mobile_text">Enter Mobile No</string>
    <string name="enter_email_text">Enter Email Id</string>
    <string name="login_credentials_text">Login Credentials</string>
    <string name="dp_request_prompt">Select the DP Request Type</string>
    <string-array name="dp_request_types_values">
        <item>Search And Apply Rule (Depending Upon Selected Payment Option)</item>
        <item>Apply Coupon Or Rule</item>
        <item>Validate Rule (With Coupon Code and Altered Amount)</item>

    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string-array name="pref_sdk_environment_titles">
        <item>Production</item>
        <item>Sandbox</item>
        <!--<item>Custom</item>-->
    </string-array>


    <!--Facebook Integration-->
    <string name="facebook_app_id">518414235266418</string>
    <string name="fb_login_protocol_scheme">fb518414235266418</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_check_out">Checkout</string>
    <string name="log_out_user">Log out user</string>

    <string name="new_book_request_label">New Cash Saverz Request</string>
    <string name="name">\u2022 Name</string>
    <string name="phone">\u2022 Phone</string>
    <string name="email">\u2022 Email</string>
    <string name="on_date">\u2022 On Date</string>
    <string name="message">\u2022 Message</string>
    <string name="service_available_places">This service is now available in Bengaluru, Hyderabad, Ranchi, Kolkata, Patna, Jamshedpur, Dhanbad, Bokaro, Muzaffarpur. By registration, you are agreed upon you want this service in mentioned city.</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="select_delivery_time_slot">Select Delivery Time Slot</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="put_new_book_request">Sorry...Do You want to put new book request?</string>
    <string name="no_data_available">No data available</string>
    <string name="register_to_cashsaverz">Register To Cash Saverz</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_cat">CatActivity</string>
    <string name="title_activity_recyclerspinner">ActivityRecyclerspinner</string>
    <string name="title_activity_order_summary">OrderSummary</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <!--This service is now available in Ranchi,Kolkata,Patna,Jamshedpur,Dhanbad,Bokaro,Muzaffarpur. By registration, you are agreed upon you want this service in mentioned city. -->
    <!--This service is now available in Ranchi,Kolkata,Patna,Jamshedpur,Dhanbad,Bokaro,Muzaffarpur. By registration, you are agreed upon you want this service in mentioned city. -->
</resources>
