<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpBookImageSlider"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:id="@+id/llLikeButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vpBookImageSlider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/elementPaddingSmall"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.like.LikeButton
            android:id="@+id/btShare"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:icon_size="24dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_gravity="center_vertical"
            app:like_drawable="@drawable/ic_action_share"
            app:unlike_drawable="@drawable/ic_action_share" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorDarkGray"></View>

        <com.like.LikeButton
            android:id="@+id/btLike"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            app:icon_size="20dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            app:icon_type="heart"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
<View
    android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_below="@+id/llLikeButton"
    android:layout_centerHorizontal="true"
    android:background="@color/colorDarkGray"></View>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/divider"
        android:layout_marginVertical="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tvBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Book Name"
                android:textColor="@color/colorBrown"
                android:textSize="18sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginRight="3dp"
                android:textColor="@color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <TextView
                android:id="@+id/tvMrpDetPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_toRightOf="@id/tvPrice"
                android:layout_marginLeft="3dp"
                android:textColor="@color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:visibility="gone"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elementMarginSmall"
                android:text="@string/prod_details"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/size"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/category"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/quantity"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brand"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/dimen_14sp"
                    android:textColor="@color/black"
                    android:text="@string/prod_desc"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvProdDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/binding"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvBinding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btNotAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:clickable="false"
        android:text="@string/not_available"
        android:theme="@style/BrownButtonStyle" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btAddToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/add_to_cart"
            android:theme="@style/YellowButtonStyle" />

        <Button
            android:id="@+id/btRentNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:onClick="onPaynowClick"
            android:text="@string/rent_now"
            android:theme="@style/BrownButtonStyle" />
    </LinearLayout>
</RelativeLayout>
